# zoria-compiler

./: .gitignore  LICENSE  README.md  zoria-lang.cabal
app/: Main.hs
examples/2/: Main.zo
src/: Environment.hs  EvalExamples.hs  Evaluator.hs  GetOpt.hs  Lexer.hs  Main.hs  Parser.hs  PrettyPrint.hs  Program.hs  Syntax.hs  TypeChecker.hs  Utility.hs  ValueSyntax.hs
src/Evaluator/: Environment.hs  Evaluator.hs  ValueSyntax.hs
src/GetOpt/: Internal.hs
src/Parser/: Common.hs  Definition.hs  Expression.hs  Identifier.hs  Module.hs  ModuleResolver.hs  ParserIO.hs  Pattern.hs  Primitive.hs  Program.hs  RawAst.hs  Type.hs
src/TypeChecker/: Algorithm.hs  Inference.hs
src/evaluator/: Evaluator.hs
test/: Empty.zo  Main.zo
test/Foo/: Bar.zo  Empty.zo
test/examples/1/: Name.zo
test/examples/2/: Foo.zo
test/examples/3/: Foo.zo  Main.zo
test/parsing/: Empty.zo  Foo.zo  OtherEmpty.zo  Test.zo
test/parsing/Foo/: Bar.zo  Empty.zo  External.zo
test/parsing/constructor_operators/: Another.zo  Main.zo
test/parsing/modules/: Another.zo  Base.zo  DefaultOperatorTest.zo  Types.zo
test/parsing/modules/Nested/: Foo.zo
test/parsing/other/: Test.zo
test/parsing/type_definitions/: Main.zo
test/unit/: Example.hs  GetOpt.hs  GetOptTests.hs  Helpers.hs  Main.hs  Spec.hs  Utility.hs
test/unit/ParserTests/: Common.hs  Helpers.hs  Identifier.hs  Module.hs
test/unit/Test/: GetOpt.hs  Helpers.hs
test/unit/Test/Evaluator/: EvaluatorTest.hs
test/unit/Test/EvaluatorTests/: EvalTests.hs
test/unit/Test/Parser/: Common.hs  Helpers.hs  Identifier.hs  Module.hs
test/unit/Test/TestEvaluator/: Eval.hs
