name:                zoria-lang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zoria-lang
license:             MIT
license-file:        LICENSE
author:              Jakub Grobelny, Łukasz Deptuch, Kamil Michalak
maintainer:          jgrobelny1@gmail.com
copyright:           2020 Jakub Grobelny, Łukasz Deptuch, Kamil Michalak
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable zoriac
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Syntax
                       Parser
                       GetOpt
                       Utility
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text >= 1.2.4.0,
                       megaparsec >= 8.0.0,
                       mtl >= 2.2.2,
                       transformers >= 0.5.6.2,
                       containers >= 0.6.2.1,
                       filepath >= 1.4.2.1,
                       directory >= 1.3.6.0