name:                zoria-lang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zoria-lang
license:             MIT
license-file:        LICENSE
author:              Jakub Grobelny, Łukasz Deptuch, Kamil Michalak
maintainer:          jgrobelny1@gmail.com
copyright:           2020 Jakub Grobelny, Łukasz Deptuch, Kamil Michalak
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    hs-source-dirs:     src
    exposed-modules:    GetOpt,
                        GetOpt.Internal,
                        Syntax,
                        Utility
    ghc-options:        -Wunused-imports
    build-depends:      base >= 4.7 && < 5,
                        text >= 1.2.4.0,
                        megaparsec >= 8.0.0
    default-language:   Haskell2010

executable zoriac
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      zoria-lang,
                        base >= 4.7 && < 5,
                        HTF >= 0.14.0.3
    default-language:   Haskell2010

test-suite unit-tests
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     test/unit
    other-modules:      GetOptTests
    build-depends:      zoria-lang,
                        base >= 4.7 && < 5,
                        HTF >= 0.14.0.3
    default-language:   Haskell2010