name:                zoria-lang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zoria-lang
license:             MIT
license-file:        LICENSE
author:              Jakub Grobelny, Łukasz Deptuch, Kamil Michalak
maintainer:          jgrobelny1@gmail.com
copyright:           2020 Jakub Grobelny, Łukasz Deptuch, Kamil Michalak
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
    hs-source-dirs:     src
    exposed-modules:    GetOpt,
                        GetOpt.Internal,
                        Syntax,
                        Parser.ParserIO,
                        Parser.Common
                        Parser.Program
                        Parser.Identifier
                        Parser.Type
                        Parser.Definition
                        Parser.Expression
                        Parser.Pattern
                        Parser.Primitive
                        Parser.ModuleResolver
                        Parser,
                        PrettyPrint,
                        Utility,
                        Evaluator,
                        Evaluator.Environment,
                        Evaluator.ValueSyntax
    ghc-options:        -Wunused-imports
    build-depends:      base >= 4.7 && < 5,
                        text >= 1.2.4.0,
                        megaparsec >= 8.0.0,
                        containers >= 0.6.2.1,
                        mtl >= 2.2.2,
                        transformers >= 0.5.6.2,
                        filepath >= 1.4.2.1,
                        directory >= 1.3.6.0

    default-language:   Haskell2010

executable zoriac
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      zoria-lang,
                        base >= 4.7 && < 5,
                        -- HTF should be removed in the final version but
                        -- i've put it because ghcide complained otherwise
                        HTF >= 0.14.0.3,
                        tasty >= 1.2.3,
                        tasty-hunit >= 0.10.0.2,
                        text >= 1.2.4.0
    default-language:   Haskell2010

test-suite unit-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test/unit
    other-modules:      GetOpt,
                        Utility
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wunused-binds -Wunused-do-bind
    build-depends:      zoria-lang,
                        base >= 4.7 && < 5,
                        tasty >= 1.2.3,
                        tasty-hunit >= 0.10.0.2
    default-language:   Haskell2010

